--- a/weatherapp/src/App.css
+++ b/weatherapp/src/App.css
@@ -1,15 +1,22 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body{
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
+}
+
 .App{
-  text-align: center;
-  flex-direction: column;
   display: flex;
-  align-items: flex-start;
+  flex-direction:row;
   justify-content: flex-start;
-  padding: 20px;
-  color: white;
-  background-image: url('./images/dark-cloudy-sky-rainy-season-stormy-weather-background-with-clouds-thunderstorm-dark-sky_817921-8689.avif');
-  background-size: cover;
-  background-position: center;
-  min-height: 100vh;
+  height: 100%;
+  background-color: red;
 }
 
 .App-header{
@@ -34,5 +41,6 @@
   flex-direction: column;
   align-items: flex-start;
   margin-top: 20px;
+  flex: 1;
 }
 
