--- a/weatherapp/src/styles/dropdown.css
+++ b/weatherapp/src/styles/dropdown.css
@@ -1,3 +1,10 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    /* background-color:  white; */
+}
+
 .dropdown{
     padding: 10px;
     font-size: 16px;
